# Rosalyn

./: .editorconfig  .gitignore  .prettierrc  README.md  package.json  vite.config.js
src/: app.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
